kubernetes/apps/network/internal/remote-services/services/transmission.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.33.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-transmission
  namespace: network
spec:
  ports:
    - port: 9091
      protocol: TCP
      targetPort: 9091
      name: http
  type: ExternalName
  externalName: zeus.nas.internal
# ---
# # yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
# apiVersion: discovery.k8s.io/v1
# kind: EndpointSlice
# metadata:
#   name: remote-internal-transmission
#   namespace: network
#   labels:
#     kubernetes.io/service-name: remote-internal-transmission
# addressType: IPv4
# ports:
#   - port: 9091
# endpoints:
#   - addresses:
#     - zeus.nas.internal
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.33.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-transmission
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "transmission"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "transmission"
    gethomepage.dev/description: "Subtitle Manager"
    gethomepage.dev/href: "https://apps.${SECRET_DOMAIN}/transmission"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "transmission.png"
    gethomepage.dev/widget.type: "transmission"
    gethomepage.dev/widget.url: http://zeus.nas.internal:9091
    gethomepage.dev/widget.username: "${HOMEPAGE_VAR_TRANSMISSION_USER}"
    gethomepage.dev/widget.password: "${quote}${HOMEPAGE_VAR_TRANSMISSION_PASS}${quote}"
    gethomepage.dev/widget.rpcUrl: "/transmission/"
    gethomepage.dev/siteMonitor: http://zeus.nas.internal:9091
spec:
  ingressClassName: internal
  rules:
    - host: "apps.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /transmission
          pathType: Prefix
          backend:
            service:
              name: remote-internal-transmission
              port:
                number: 9091
  tls:
    - hosts:
        - "apps.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
